# bridge

./: .dockerignore  .gitignore  CI_STATUS_REPORT.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.bridge-ui  LLM.md  Makefile  README.md  WORKFLOWS_SUMMARY.md  WORKFLOW_AUDIT.md  check-ci-status.sh  cloudbuild.yaml  compose.infra.yml  compose.local.yml  compose.mainnet.yml  compose.testnet.yml  compose.yml  config.kms.yaml  config.yaml  go.mod  index.js  package.json  pnpm-lock.yaml  pnpm-lock.yaml.1906038314  pnpm-workspace.yaml  profile.go  profile_test.go  push-and-release.sh  test-bridge-ui.js  tsconfig.apps.base.json  tsconfig.base.json  vercel.json
.github/: CODEOWNERS  dependabot.yml
.storybook/: preview.ts
app/: .eslintrc.js  Dockerfile  README.md  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  sentry.client.config.js  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json
benchmarks/: practical-comparison.md  ringtail-vs-bls-comparison.md  run-benchmark.sh  signature-benchmark.go
bridge/: types.d.ts
config/: peers.json
contracts/: .gitignore  contracts.rar  eth_flatten.sol  hardhat.config.ts  package.json
docker/: compose.mpc.yml  docker-compose.yaml.bak  entrypoint.sh  mpc-operator.yml
docs/: BRIDGE-STATUS.md  CI-CD-DOCKER-IMAGES.md  DEPLOYMENT.md  LLM.md  LOCAL-SETUP.md  LUX-ID-INTEGRATION.md  MIGRATION-TO-GO-MPC.md  MPC-GO-INTEGRATION.md  MPC-INTEGRATION-COMPLETE.md  README.md  (+13 more)
mpc-nodes/ringtail/: Cargo.toml
mpc-nodes/ringtail/src/: gaussian.rs  lib.rs  params.rs  ring.rs
ui/: ui  (+1 more)
(+2368 files in other folders)
