[package]
name = "ringtail-mpc"
version = "0.1.0"
edition = "2021"
authors = ["Lux Network Team"]
description = "Ringtail lattice-based threshold signatures for Lux Bridge"

[dependencies]
# Core cryptographic dependencies
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
rand_distr = "0.4"
sha3 = "0.10"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Math optimizations
rayon = "1.8"  # Parallel computation
packed_simd = { version = "0.3", package = "packed_simd_2" }

# Network communication (reuse from existing MPC)
libp2p = "0.53"
prost = "0.12"
tonic = "0.10"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3

[[bin]]
name = "ringtail_keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "ringtail_sign_offline"
path = "src/bin/sign_offline.rs"

[[bin]]
name = "ringtail_sign_online"
path = "src/bin/sign_online.rs"

[lib]
name = "ringtail"
path = "src/lib.rs"